<resources>
    <string name="app_name">Node Maps</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="bt_NaoTemConta">Não tem conta? Cadastre-se</string>
    <string name="texto_Acessar_Conta">Acessar sua conta</string>
    <string name="bt_Entrar">Entrar</string>
    <string name="texto_Cadastrar_Conta">Cadastrar nova conta</string>
    <string name="bt_TermosEServicos">Concordo Termos e Privacidade</string>

    //Apenas para teste do menu inferior principal
    <string name="titulo_home">Home</string>
    <string name="titulo_atividades">Atividades</string>
    <string name="titulo_notificacao">Notificação</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bt_Cadastrar">Cadastrar</string>
</resources>
