<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CadastroUsuarioActivity"
    tools:layout_editor_absoluteY="81dp">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="360dp"
        android:layout_height="511dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginEnd="6dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="6dp"
            android:background="@color/colorBranco_1"
            android:elevation="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="41dp"
                android:layout_marginBottom="32dp"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:text="@string/texto_Cadastrar_Conta"
                android:textAlignment="center"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@+id/editText_CadastroNome"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <EditText
                android:id="@+id/editText_CadastroNome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:drawablePadding="4dp"
                android:drawableStart="@drawable/ic_nome_cinza_24dp"
                android:ems="10"
                android:hint="Nome"
                android:inputType="text|textPersonName"
                app:layout_constraintBottom_toTopOf="@+id/editText_CadastroLogin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <EditText
                android:id="@+id/editText_CadastroLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:drawablePadding="4dp"
                android:drawableStart="@drawable/ic_computer_cinza_24dp"
                android:ems="10"
                android:hint="Login"
                android:inputType="textVisiblePassword"
                app:layout_constraintBottom_toTopOf="@+id/editText_Email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_CadastroNome" />

            <EditText
                android:id="@+id/editText_Email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:drawablePadding="4dp"
                android:drawableStart="@drawable/ic_email_cinza_24dp"
                android:ems="10"
                android:hint="E-mail"
                android:inputType="textEmailAddress"
                app:layout_constraintBottom_toTopOf="@+id/editText_Senha"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_CadastroLogin" />

            <EditText
                android:id="@+id/editText_Senha"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:drawablePadding="4dp"
                android:drawableStart="@drawable/ic_cadeado_cinza_24dp"
                android:ems="10"
                android:hint="Senha"
                android:inputType="textPersonName|textPassword"
                app:layout_constraintBottom_toTopOf="@+id/button_CadastrarUsuario"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_Email" />

            <Button
                android:id="@+id/button_LoginNaoTemConta"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="8dp"
                android:background="@color/colorBranco_1"
                android:text="@string/bt_TermosEServicos"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/checkBox_CadastroConfirmado"
                app:layout_constraintTop_toBottomOf="@+id/button_CadastrarUsuario" />

            <CheckBox
                android:id="@+id/checkBox_CadastroConfirmado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/button_LoginNaoTemConta"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/button_CadastrarUsuario"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="11dp"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:background="@color/colorPrimary"
                android:text="@string/bt_Cadastrar"
                android:textAllCaps="false"
                android:textColor="@color/colorBranco_1"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/button_LoginNaoTemConta"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_Senha" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>